--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@
 						<div class="inner">
 							<h2>Mason Color 4 a Cure 5K</h2>
 							<p>Benefitting the <br />
-							Lukemia Lymphoma Society<br />
+							Leukemia Lymphoma Society<br />
 							by Mason High School National Honor Society.</p>
 							<ul class="actions">
 								<li><a href="#" class="button special">Register</a></li>
