--- a/event.html
+++ b/event.html
@@ -94,7 +94,7 @@
 								<ul class="alt">
 									<li><i class="fa fa-map-marker" aria-hidden="true"></i> <a href="https://goo.gl/maps/e5Pij3ppvyQ2">Corwin Nixon Park</a> Mason, OH 45040</li>
 									<li><i class="fa fa-calendar" aria-hidden="true"></i> Saturday 11/11/17 10 - 11 AM</li>
-									<li><i class="fa fa-heartbeat" aria-hidden="true"></i> Benefiting the Lukemia and Lymphoma Society through Mason National Honor Society</li>
+									<li><i class="fa fa-heartbeat" aria-hidden="true"></i> Benefiting the Leukemia and Lymphoma Society through Mason National Honor Society</li>
 								</ul>
 
 								<h5>Pricing</h5>
