--- a/home.html
+++ b/home.html
@@ -50,7 +50,7 @@
 							</video>
 				<div id="home-text">
 					<h2>Mason Color 4 a Cure 5K</h2>
-					<p>Benefiting the Lukemia Lymphoma Society<br/> Through Mason High School National Honor Society</p>
+					<p>Benefiting the Leukemia Lymphoma Society<br/> Through Mason High School National Honor Society</p>
 					<ul class="actions">
 						<li><a href="#" class="button">Register</a></li>
 					</ul>
