--- a/newindex.html
+++ b/newindex.html
@@ -75,7 +75,7 @@
 								</div><div class="content">
 									<h2>Fund approximately
 									</br></br><span class="ynum">300</span></br>
-									active Lukemia & Lymphoma Society Research projects.</h2>
+									active Leukemia & Lymphoma Society Research projects.</h2>
 								</div>
 							</section>
 							<section class="spotlight">
@@ -132,7 +132,7 @@
 		<section id="banner">
 			<div class="inner">
 				<h2>Mason Color 4 a Cure 5K</h2>
-				<p>Benefiting the Lukemia Lymphoma Society<br /> Through Mason High School National Honor Society</p>
+				<p>Benefiting the Leukemia Lymphoma Society<br /> Through Mason High School National Honor Society</p>
 				<ul class="actions">
 					<!-- <li><a href="#" class="button">Register</a></li> -->
 				</ul>
@@ -199,7 +199,7 @@
 					<h2>Fund approximately
 						</br>
 						</br><span class="ynum">300</span></br>
-						active Lukemia & Lymphoma Society Research projects.</h2>
+						active Leukemia & Lymphoma Society Research projects.</h2>
 				</div>
 			</section>
 			<section class="spotlight">
