fix mailto link

--- a/event.html
+++ b/event.html
@@ -218,7 +218,7 @@
 								</div>
 								<div id="collapseSeven" class="collapse" role="tabpanel" aria-labelledby="headingSeven" data-parent="#accordion">
 									<div class="card-body">
-										Contact us at <b><a href="mailto:mailto:mhscolor4acure5k@gmail.com">mailto:mhscolor4acure5k@gmail.com</a><b> or <b>513.884.6175</b>
+										Contact us at <b><a href="mailto:mhscolor4acure5k@gmail.com">mailto:mhscolor4acure5k@gmail.com</a><b> or <b>513.884.6175</b>
 									</div>
 								</div>
 							</div>
