--- a/colorstations.html
+++ b/colorstations.html
@@ -45,7 +45,7 @@
 						<div class="inner">
 							<h2>In honor of...</h2>
 							<p>This year, we're honoring 4 former Mason students <br>that were
-								victims of Lukemia and Lymphoma <br>by dedicating each student a color station.</p>
+								victims of Leukemia and Lymphoma <br>by dedicating each student a color station.</p>
 
 						</div>
 						<a href="#two" class="more scrolly">Read their stories</a>
