changing date to midnight

--- a/contact.html
+++ b/contact.html
@@ -65,7 +65,7 @@
 			<div class="inner">
 				<header>
 					<h2>Register now</h2>
-					<p>Register before 10.26 to receive a free t-shirt.</p>
+					<p>Register before midnight 10.26 to receive a free t-shirt.</p>
 				</header>
 				<ul class="actions vertical">
 					<li><a href="https://www.locallevelevents.com/events/details/3828" class="button fit">REGISTER</a></li>
