--- a/event.html
+++ b/event.html
@@ -99,7 +99,7 @@
 
 								<h5>Pricing</h5>
 								<ul class="alt">
-									<li>10/16 - 10/27(@noon) Early Registration: $25 with t-shirt</li>
+									<li>10/16 - 10/26 (Midnight) Early Registration: $25 with t-shirt</li>
 									<li>10/27(@noon) - 11/10(@noon) Late Registration: $25 no t-shirt</li>
 									<li>11/11 Day of Registration: $30 no t-shirt</li>
 									<li><i>Children 3 and under: free</i></li>
@@ -239,7 +239,7 @@
 			<div class="inner">
 				<header>
 					<h2>Register now</h2>
-					<p>Register before 10.26 to receive a free t-shirt.</p>
+					<p>Register before midnight 10.26 to receive a free t-shirt.</p>
 				</header>
 				<ul class="actions vertical">
 					<li><a href="https://www.locallevelevents.com/events/details/3828" class="button fit special">REGISTER</a></li>
