--- a/sponsors.html
+++ b/sponsors.html
@@ -48,7 +48,6 @@
             <section class="wrapper style5">
                 <div class="inner">
                     <section>
-                        <h2>Corporate Sponsors</h2>
                         <div class="box alt">
                             <div class="row uniform 50%">
                                 <!-- <div class="4u"><span class="image fit"><img src="http://logo-load.com/uploads/posts/2016-04/1459873060_culvers-logo.png" alt="" /></span></div>
@@ -62,7 +61,6 @@
                         </div>
                     </section>
                     <section>
-                        <h2>Personal Sponsors</h2>
                         <div class="row">
                             <div class="6u 12u$(medium)">
                                 <ul class="alt">
@@ -94,7 +92,7 @@
             <div class="inner">
                 <header>
                     <h2>Register now</h2>
-                    <p>Register before 10.26 to receive a free t-shirt.</p>
+                    <p>Register before midnight 10.26 to receive a free t-shirt.</p>
                 </header>
                 <ul class="actions vertical">
                     <li><a href="https://www.locallevelevents.com/events/details/3828" class="button fit">REGISTER</a></li>
