--- a/event.html
+++ b/event.html
@@ -100,7 +100,7 @@
 								<h5>Pricing</h5>
 								<ul class="alt">
 									<li>10/16 - 10/26 (Midnight) Early Registration: $25 with t-shirt</li>
-									<li>10/27(@noon) - 11/10(@noon) Late Registration: $25 no t-shirt</li>
+									<li>10/27 - 11/10 (Noon) Late Registration: $25 no t-shirt</li>
 									<li>11/11 Day of Registration: $30 no t-shirt</li>
 									<li><i>Children 3 and under: free</i></li>
 								</ul>
