adding course map

--- a/event.html
+++ b/event.html
@@ -86,6 +86,8 @@
 									<ul class="alt">
 										<li>Bring your printed <a target="_blank" href="https://drive.google.com/file/d/0B_fYFpL-BMVTZjRHa1ZwT0ZJcU0/view?usp=sharing">Adult</a> or <a target="_blank" href="https://drive.google.com/file/d/0B_fYFpL-BMVTeEZnMWNZR0V3bF9qVkNUby0ycVpqR3hTLXpV/view?usp=sharing">Student</a>											waiver forms to check-in at the <a target="_blank" href="https://goo.gl/maps/NJE7pdRXsoy">Mason High School Small Commons</a> (6100 S Mason Montgomery Rd)</li>
 									</ul>
+									<h5>Course Map</h5>
+									<img src="images/course.png">
 								</div>
 
 							</div>
