adding about the honorees tab

--- a/event.html
+++ b/event.html
@@ -29,6 +29,7 @@
 								<li><a href="index.html">Home</a></li>
 								<li><a href="event.html">Event Details</a></li>
 								<li><a href="event.html#faq">FAQ</a></li>
+								<li><a href="colorstations.html">About the Honorees</a></li>
 								<!-- <li><a href="#">About Us</a></li> -->
 								<li><a href="sponsors.html">Our Sponsors</a></li>
 								<li><a href="contact.html">Contact Us</a></li>
@@ -49,7 +50,6 @@
 			<section class="wrapper style5">
 				<div class="inner">
 					<section>
-						<h2>Event Details</h2>
 						<div class="row">
 							<div class="6u 12u$(medium)">
 								<h5>Schedule</h5>
@@ -96,7 +96,7 @@
 								<ul class="alt">
 									<li><i class="fa fa-map-marker" aria-hidden="true"></i> <a href="https://goo.gl/maps/e5Pij3ppvyQ2">Corwin Nixon Park</a> Mason, OH 45040</li>
 									<li><i class="fa fa-calendar" aria-hidden="true"></i> Saturday 11/11/17 10 - 11 AM</li>
-									<li><i class="fa fa-heartbeat" aria-hidden="true"></i> Benefiting the Leukemia and Lymphoma Society through Mason National Honor Society</li>
+									<li><i class="fa fa-heartbeat" aria-hidden="true"></i> Benefiting the Leukemia and Lymphoma Society through Mason National Honor Society.<br><a href="colorstations.html">Learn more about our color station honorees...</a></li>
 								</ul>
 
 								<h5>Pricing</h5>
