adding sponsor logos

--- a/sponsors.html
+++ b/sponsors.html
@@ -51,13 +51,13 @@
                     <section>
                         <div class="box alt">
                             <div class="row uniform 50%">
-                                <!-- <div class="4u"><span class="image fit"><img src="http://logo-load.com/uploads/posts/2016-04/1459873060_culvers-logo.png" alt="" /></span></div>
-                                <div class="4u"><span class="image fit"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5c/Current_Kroger_logo.svg/1000px-Current_Kroger_logo.svg.png" alt="" /></span></div>
-                                <div class="4u"><span class="image fit"><img src="https://www.philanthropy.com/img/photos/biz/photo_81669_original.png" alt="" /></span></div>
-                                <div class="4u"><span class="image fit"><img src="images/pic03.jpg" alt="" /></span></div>
-                                <div class="4u"><span class="image fit"><img src="images/pic02.jpg" alt="" /></span></div>
+                                <div class="3u"><span class="image fit"><a href="https://westshorepizza.com/"><img src="https://res.cloudinary.com/grubhub/image/upload/w_400,h_300,f_auto,fl_lossy,q_80,c_fit/b3laerjfxg19ozb2bugz" alt="" /></a></span></div>
+                                <div class="3u"><span class="image fit"><a href="http://www.masonanimalhospital.com/"><img src="http://www.masonanimalhospital.com/layout/images/logo.png" alt="" /></a></span></div>
+                                <div class="3u"><span class="image fit"><a href="http://www.runbuckeye.com/"><img src="http://www.runbuckeye.com/uploads/8/3/2/0/83209168/1472656750.png" alt="" /></a></span></div>
+                                <div class="3u"><span class="image fit"><a href="http://runmason.com"><img src="images/run boosters.png"" alt="" /></a></span></div>
+                            <div class="4u"><span class="image fit"><img src="images/pic02.jpg" alt="" /></span></div>
                                 <div class="4u"><span class="image fit"><img src="images/pic01.jpg" alt="" /></span></div>
-                                <div class="4u"><span class="image fit"><img src="images/pic02.jpg" alt="" /></span></div> -->
+                                <div class="4u"><span class="image fit"><img src="images/pic02.jpg" alt="" /></span></div>
                             </div>
                         </div>
                     </section>
