remove shirt from cta

--- a/contact.html
+++ b/contact.html
@@ -65,8 +65,7 @@
 		<section id="cta" class="wrapper style4">
 			<div class="inner">
 				<header>
-					<h2>Register now</h2>
-					<p>Register before midnight 10.26 to receive a free t-shirt.</p>
+					<h2>Register today</h2>
 				</header>
 				<ul class="actions vertical">
 					<li><a href="https://www.locallevelevents.com/events/details/3828" class="button fit">REGISTER</a></li>
