--- a/newindex.html
+++ b/newindex.html
@@ -33,12 +33,12 @@
 								<li><a href="sponsors.html">Our Sponsors</a></li>
 								<li><a href="contact.html">Contact Us</a></li>
 
-								<li><a href="https://www.locallevelevents.com/events/details/3828"></br>Register</a></li>
+								<li><a href="https://www.locallevelevents.com/events/details/3828"><br>Register</a></li>
 							</ul>
 						</div>
-<<<<<<< HEAD
+
 						<a href="#two" class="more scrolly">Learn More</a>
-					</section>
+					
 
 					<!-- One -->
 						<section id="one" class="wrapper style1 special">
@@ -74,21 +74,21 @@
 									<img src="images/patients.jpg" alt="" />
 								</div><div class="content">
 									<h2>Fund approximately
-									</br></br><span class="ynum">300</span></br>
+									<br><br><span class="ynum">300</span><br>
 									active Leukemia & Lymphoma Society Research projects.</h2>
 								</div>
 							</section>
 							<section class="spotlight">
 								<div class="image"><img src="images/patients.jpg" alt="" /></div><div class="content">
 									<h2>Help more than
-									</br></br><span class="ynum">55,000</span></br>
+									<br><br><span class="ynum">55,000</span><br>
 									patients afford treatment.</h2>
 								</div>
 							</section>
 							<section class="spotlight">
 								<div class="image"><img src="images/pic03.jpg" alt="" /></div><div class="content">
 									<h2>Invest More than
-									</br></br><span class="ynum">$1 B. +</span></br>
+									<br><br><span class="ynum">$1 B. +</span><br>
 									in cancer research.</h2>
 								</div>
 							</section>
@@ -122,7 +122,7 @@
 							<li>Color 4 a cure 5k</li><li>Mason High School National Honor Society</li>
 						</ul>
 					</footer>
-=======
+
 					</li>
 				</ul>
 			</nav>
@@ -181,7 +181,6 @@
 				</div>
 			</section>
 		</section>
->>>>>>> f49cacb1459cca2c4a488a7f669474eb18edff05
 
 		<!-- Three -->
 		<section id="three" class="wrapper style3 special OR">
@@ -197,8 +196,8 @@
 				<div class="image"><img src="https://static.pexels.com/photos/248152/pexels-photo-248152.jpeg" alt="" /></div>
 				<div class="content">
 					<h2>Fund approximately
-						</br>
-						</br><span class="ynum">300</span></br>
+						<br>
+						<br><span class="ynum">300</span><br>
 						active Leukemia & Lymphoma Society Research projects.</h2>
 				</div>
 			</section>
@@ -206,8 +205,8 @@
 				<div class="image"><img src="images/patients.jpg" alt="" /></div>
 				<div class="content">
 					<h2>Help more than
-						</br>
-						</br><span class="ynum">55,000</span></br>
+						<br>
+						<br><span class="ynum">55,000</span><br>
 						patients afford treatment.</h2>
 				</div>
 			</section>
@@ -215,8 +214,8 @@
 				<div class="image"><img src="images/pic03.jpg" alt="" /></div>
 				<div class="content">
 					<h2>Invest More than
-						</br>
-						</br><span class="ynum">$1 B. +</span></br>
+						<br>
+						<br><span class="ynum">$1 B. +</span><br>
 						in cancer research.</h2>
 				</div>
 			</section>
@@ -240,7 +239,7 @@
 	<script src="assets/js/video.js"></script>
 
 
-<<<<<<< HEAD
+
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/jquery.scrollex.min.js"></script>
 			<script src="assets/js/jquery.scrolly.min.js"></script>
@@ -259,6 +258,5 @@
 	<script src="assets/js/main.js"></script>
 
 </body>
->>>>>>> f49cacb1459cca2c4a488a7f669474eb18edff05
 
 </html>
