check back note

--- a/event.html
+++ b/event.html
@@ -14,8 +14,8 @@
 <body>
 
 <!-- Page Wrapper -->
-<div id="page-wrapper"> 
-  
+<div id="page-wrapper">
+
   <!-- Header -->
   <header id="header">
     <h1><a href="index.html">Mason Color 4 a cure 5k</a></h1>
@@ -28,7 +28,6 @@
               <li><a href="event.html">Event Details</a></li>
               <li><a href="event.html#faq">FAQ</a></li>
               <li><a href="colorstations.html">About the Honorees</a></li>
-              <!-- <li><a href="#">About Us</a></li> -->
               <li><a href="sponsors.html">Our Sponsors</a></li>
               <li><a href="contact.html">Contact Us</a></li>
               <li><a href="https://www.locallevelevents.com/events/details/3828"><br>
@@ -39,7 +38,7 @@
       </ul>
     </nav>
   </header>
-  
+
   <!-- Main -->
   <article id="main">
     <header>
@@ -49,7 +48,7 @@
       <div class="inner">
         <section>
           <div class="row">
-            <h3>Check back in November for details on  the 2018 Color 4 a Cure 5K</h3>
+            <h3>Check back in November for details on the Color 4 a Cure 5K 2018!</h3>
             <div class="6u 12u$(medium)">
               <h5>Schedule</h5>
               <div class="table-wrapper">
@@ -106,8 +105,8 @@
               <a href="https://www.locallevelevents.com/events/details/3828" class="button fit special">Register</a> <a href="https://drive.google.com/file/d/0B_fYFpL-BMVTZjRHa1ZwT0ZJcU0/view?usp=sharing" class="button fit large">Adult Waiver</a> <a href="https://drive.google.com/file/d/0B_fYFpL-BMVTeEZnMWNZR0V3bF9qVkNUby0ycVpqR3hTLXpV/view?usp=sharing" class="button fit">Student Waiver</a> </div>
           </div>
         </section>
-        
-        <!--FAQ--> 
+
+        <!--FAQ-->
         <br>
         <br>
         <header>
@@ -175,7 +174,7 @@
       </div>
     </section>
   </article>
-  
+
   <!-- CTA -->
   <section id="cta" class="wrapper style4">
     <div class="inner">
@@ -188,7 +187,7 @@
       </ul>
     </div>
   </section>
-  
+
   <!-- Footer -->
   <footer id="footer">
     <ul class="icons">
@@ -203,14 +202,14 @@
   </footer>
 </div>
 
-<!-- Scripts --> 
-<script src="assets/js/jquery.min.js"></script> 
-<script src="assets/js/jquery.scrollex.min.js"></script> 
-<script src="assets/js/jquery.scrolly.min.js"></script> 
-<script src="assets/js/skel.min.js"></script> 
-<script src="assets/js/util.js"></script> 
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script> 
-<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]--> 
+<!-- Scripts -->
+<script src="assets/js/jquery.min.js"></script>
+<script src="assets/js/jquery.scrollex.min.js"></script>
+<script src="assets/js/jquery.scrolly.min.js"></script>
+<script src="assets/js/skel.min.js"></script>
+<script src="assets/js/util.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
 <script src="assets/js/main.js"></script>
 </body>
 </html>
