--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
 								<li><a href="sponsors.html">Our Sponsors</a></li>
 								<li><a href="contact.html">Contact Us</a></li>
 
-								<li><a href="https://www.locallevelevents.com/events/details/3828"></br>Register</a></li>
+								<!-- <li><a href="https://www.locallevelevents.com/events/details/3828"></br>Register</a></li> -->
 
 
 
@@ -55,24 +55,24 @@
 				<div class="inner">
 					<h4>Contact Us</h4>
 					<h5><i class="fa fa-envelope" aria-hidden="true"></i><a href="mailto:mhscolor4acure5k@gmail.com"> mhscolor4acure5k@gmail.com</a></h5>
-					<h5><i class="fa fa-phone" aria-hidden="true"></i> 513.884.6175</h5>
+					<h5><i class="fa fa-phone" aria-hidden="true"></i> 513.668.6868</h5>
 					<hr />
 				</div>
 			</section>
 		</article>
 
 		<!-- CTA -->
-		<section id="cta" class="wrapper style4">
-			<div class="inner">
-				<header>
-					<h2>Register today</h2>
-				</header>
-				<ul class="actions vertical">
-					<li><a href="https://www.locallevelevents.com/events/details/3828" class="button fit">REGISTER</a></li>
-					<li><a href="event.html" class="button fit special">Learn more</a></li>
-				</ul>
-			</div>
-		</section>
+	  <section id="cta" class="wrapper style4">
+	    <div class="inner">
+	      <header>
+	        <h2>2018 Registration open in October</h2>
+	      </header>
+	      <ul class="actions vertical">
+	        <!-- <li><a href="https://www.locallevelevents.com/events/details/3828" class="button fit">REGISTER</a></li> -->
+	        <li><a href="event.html" class="button fit special">Learn more</a></li>
+	      </ul>
+	    </div>
+	  </section>
 		<!-- Footer -->
 		<footer id="footer">
 			<ul class="icons">
