--- a/event.html
+++ b/event.html
@@ -18,25 +18,28 @@
 
   <!-- Header -->
   <header id="header">
-    <h1><a href="index.html">Mason Color 4 a cure 5k</a></h1>
+    <h1><a href="index.html">MASON COLOR 4 A CURE 5K</a></h1>
     <nav id="nav">
       <ul>
-        <li class="special"> <a href="#menu" class="menuToggle"><span>Menu</span></a>
+        <li class="special">
+          <a href="#menu" class="menuToggle"><span>Menu</span></a>
           <div id="menu">
             <ul>
               <li><a href="index.html">Home</a></li>
               <li><a href="event.html">Event Details</a></li>
               <li><a href="event.html#faq">FAQ</a></li>
               <li><a href="colorstations.html">About the Honorees</a></li>
+              <!-- <li><a href="about.html">About Us</a></li> -->
               <li><a href="sponsors.html">Our Sponsors</a></li>
               <li><a href="contact.html">Contact Us</a></li>
-              <li><a href="https://www.locallevelevents.com/events/details/3828"><br>
-                Register</a></li>
+
+              <!-- <li><a href="https://www.locallevelevents.com/events/details/3828"></br>Register</a></li> -->
             </ul>
           </div>
         </li>
       </ul>
     </nav>
+
   </header>
 
   <!-- Main -->
@@ -48,41 +51,17 @@
       <div class="inner">
         <section>
           <div class="row">
-            <h3>Check back in November for details on the Color 4 a Cure 5K 2018!</h3>
+
             <div class="6u 12u$(medium)">
+              <header>
               <h5>Schedule</h5>
+            </header>
               <div class="table-wrapper">
-                <table id="sched">
-                  <tbody>
-                    <tr>
-                      <td>9:30-10:00 AM</td>
-                      <td>Check-in begins in Mason High School Small Commons</td>
-                    </tr>
-                    <tr>
-                      <td>10:15 AM</td>
-                      <td>Organize into pacing groups</td>
-                    </tr>
-                    <tr>
-                      <td>10:30 AM</td>
-                      <td>Runners begin</td>
-                    </tr>
-                    <tr>
-                      <td>10:35 AM</td>
-                      <td>Joggers begin</td>
-                    </tr>
-                    <tr>
-                      <td>10:40 AM</td>
-                      <td>Walkers begin</td>
-                    </tr>
-                    <tr>
-                      <td>Post-race</td>
-                      <td>Food and music</td>
-                    </tr>
-                  </tbody>
-                </table>
+                <p>Check back in October for more details about the 2018 Color 4 a Cure 5K!</p>
+
                 <h5>Race Day</h5>
                 <ul class="alt">
-                  <li>Bring your printed <a target="_blank" href="https://drive.google.com/file/d/0B_fYFpL-BMVTZjRHa1ZwT0ZJcU0/view?usp=sharing">Adult</a> or <a target="_blank" href="https://drive.google.com/file/d/0B_fYFpL-BMVTeEZnMWNZR0V3bF9qVkNUby0ycVpqR3hTLXpV/view?usp=sharing">Student</a> waiver forms to check-in at the <a target="_blank" href="https://goo.gl/maps/NJE7pdRXsoy">Mason High School Small Commons</a> (6100 S Mason Montgomery Rd)</li>
+                  <li>Bring your printed <a target="_blank" href="https://drive.google.com/file/d/0B_fYFpL-BMVTZjRHa1ZwT0ZJcU0/view?usp=sharing">Adult</a> or <a target="_blank" href="https://drive.google.com/file/d/0B_fYFpL-BMVTeEZnMWNZR0V3bF9qVkNUby0ycVpqR3hTLXpV/view?usp=sharing">Student</a> waiver forms to check-in at the <a target="_blank" href="https://goo.gl/maps/NJE7pdRXsoy">Mason High School Team Room</a> (6100 S Mason Montgomery Rd)</li>
                 </ul>
                 <h5>Course Map</h5>
                 <img src="images/newcourse.png" alt="course"> </div>
@@ -91,18 +70,20 @@
               <h5>Color 4 A Cure 5K</h5>
               <ul class="alt">
                 <li><i class="fa fa-map-marker" aria-hidden="true"></i> <a href="https://goo.gl/maps/e5Pij3ppvyQ2">Corwin Nixon Park</a> Mason, OH 45040</li>
-                <li><i class="fa fa-calendar" aria-hidden="true"></i> Saturday 11/11/17 10 - 11 AM</li>
+                <li><i class="fa fa-calendar" aria-hidden="true"></i> Saturday November 11, 2018 at 1 PM </li>
                 <li><i class="fa fa-heartbeat" aria-hidden="true"></i> Benefiting the Leukemia and Lymphoma Society through Mason National Honor Society.<br>
                   <a href="colorstations.html">Learn more about our color station honorees...</a></li>
               </ul>
               <h5>Pricing</h5>
+                <i>Check back soon for registration deadlines!</i>
+                <br><br>
               <ul class="alt">
-                <li>10/16 - 10/26 (Midnight) Early Registration: $25 with t-shirt</li>
-                <li>10/27 - 11/10 (Noon) Late Registration: $25 no t-shirt</li>
-                <li>11/11 Day-of Registration: $30 no t-shirt</li>
+                <li>Early Registration: $25 with t-shirt</li>
+                <li>Late Registration: $25 no t-shirt</li>
+                <li>Day-of Registration: $30 no t-shirt</li>
                 <li><i>Children 3 and under: free</i></li>
               </ul>
-              <a href="https://www.locallevelevents.com/events/details/3828" class="button fit special">Register</a> <a href="https://drive.google.com/file/d/0B_fYFpL-BMVTZjRHa1ZwT0ZJcU0/view?usp=sharing" class="button fit large">Adult Waiver</a> <a href="https://drive.google.com/file/d/0B_fYFpL-BMVTeEZnMWNZR0V3bF9qVkNUby0ycVpqR3hTLXpV/view?usp=sharing" class="button fit">Student Waiver</a> </div>
+              <!-- <a href="https://www.locallevelevents.com/events/details/3828" class="button fit special disabled">Check back later for Registration</a> <a href="https://drive.google.com/file/d/0B_fYFpL-BMVTZjRHa1ZwT0ZJcU0/view?usp=sharing" class="button fit large">Adult Waiver</a> <a href="https://drive.google.com/file/d/0B_fYFpL-BMVTeEZnMWNZR0V3bF9qVkNUby0ycVpqR3hTLXpV/view?usp=sharing" class="button fit">Student Waiver</a> </div> -->
           </div>
         </section>
 
@@ -179,10 +160,10 @@
   <section id="cta" class="wrapper style4">
     <div class="inner">
       <header>
-        <h2>Register today</h2>
+        <h2>2018 Registration open in October</h2>
       </header>
       <ul class="actions vertical">
-        <li><a href="https://www.locallevelevents.com/events/details/3828" class="button fit">REGISTER</a></li>
+        <!-- <li><a href="https://www.locallevelevents.com/events/details/3828" class="button fit">REGISTER</a></li> -->
         <li><a href="event.html" class="button fit special">Learn more</a></li>
       </ul>
     </div>
