--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<div id="page-wrapper">
 
 		<!-- Header -->
-		<header id="header" class="alt">
+		<header id="header">
 			<h1><a href="index.html">MASON COLOR 4 A CURE 5K</a></h1>
 			<nav id="nav">
 				<ul>
@@ -30,16 +30,17 @@
 								<li><a href="event.html">Event Details</a></li>
 								<li><a href="event.html#faq">FAQ</a></li>
 <li><a href="colorstations.html">About the Honorees</a></li>
-								<!-- <li><a href="#">About Us</a></li> -->
+								<!-- <li><a href="about.html">About Us</a></li> -->
 								<li><a href="sponsors.html">Our Sponsors</a></li>
 								<li><a href="contact.html">Contact Us</a></li>
 
-								<li><a href="https://www.locallevelevents.com/events/details/3828"></br>Register</a></li>
+								<!-- <li><a href="https://www.locallevelevents.com/events/details/3828"></br>Register</a></li> -->
 							</ul>
 						</div>
 					</li>
 				</ul>
 			</nav>
+
 		</header>
 
 		<!-- Banner -->
