--- a/colorstations.html
+++ b/colorstations.html
@@ -18,29 +18,30 @@
 			<div id="page-wrapper">
 
 				<!-- Header -->
-					<header id="header" class="alt">
-						<h1><a href="index.html">MASON COLOR 4 A CURE 5K</a></h1>
-						<nav id="nav">
-							<ul>
-								<li class="special">
-									<a href="#menu" class="menuToggle"><span>Menu</span></a>
-									<div id="menu">
-										<ul>
-											<li><a href="index.html">Home</a></li>
-											<li><a href="event.html">Event Details</a></li>
-											<li><a href="event.html#faq">FAQ</a></li>
-											<li><a href="colorstations.html">About the Honorees</a></li>
-											<!-- <li><a href="#">About Us</a></li> -->
-											<li><a href="sponsors.html">Our Sponsors</a></li>
-											<li><a href="contact.html">Contact Us</a></li>
+				<header id="header">
+			    <h1><a href="index.html">MASON COLOR 4 A CURE 5K</a></h1>
+			    <nav id="nav">
+			      <ul>
+			        <li class="special">
+			          <a href="#menu" class="menuToggle"><span>Menu</span></a>
+			          <div id="menu">
+			            <ul>
+			              <li><a href="index.html">Home</a></li>
+			              <li><a href="event.html">Event Details</a></li>
+			              <li><a href="event.html#faq">FAQ</a></li>
+			              <li><a href="colorstations.html">About the Honorees</a></li>
+			              <!-- <li><a href="about.html">About Us</a></li> -->
+			              <li><a href="sponsors.html">Our Sponsors</a></li>
+			              <li><a href="contact.html">Contact Us</a></li>
 
-											<li><a href="https://www.locallevelevents.com/events/details/3828"></br>Register</a></li>
-										</ul>
-									</div>
-								</li>
-							</ul>
-						</nav>
-					</header>
+			              <!-- <li><a href="https://www.locallevelevents.com/events/details/3828"></br>Register</a></li> -->
+			            </ul>
+			          </div>
+			        </li>
+			      </ul>
+			    </nav>
+
+			  </header>
 
 					<section id="banner">
 						<div class="inner">
@@ -62,10 +63,10 @@
 						</div>
 					</section>
 					<section class="spotlight">
-						<div class="image"><img src="images/honor/green-joel.jpg" alt="" /></div>
+						<div class="image"><img src="images/honor/green-ella.jpeg" alt="" /></div>
 						<div class="content">
-							<h3 class ="honortitle">Green Station: Joel Brown</h3>
-							<p>Joel was diagnosed with Acute Lymphoblastic Leukemia (ALL) on June 11, 2008. Joel spent one month in Cincinnati Children's hospital the summer of 2008, followed by another 7 months of intense treatment.  On October 25, 2010, Joel's spinal tap test results showed that the cancer was back; he had a CNS relapse.  In December 2010 it was determined that Joel would be best treated with a bone marrow transplant. His sister Allison was a perfect match as a donor.  On February 1, 2011, after a week of total body irradiation and chemo to kill off Joel's bone marrow, Allison's cells were harvested, processed and infused into Joel.  In September 2011, Joel was able to go  back to school and lead a normal life.  Joel went on to college at Bowling Green University where he studied to become a nurse.  Joel began working at Jewish Hospital, in their BMT unit, this past summer and just got engaged to his college sweetheart.							</p>
+							<h3 class ="honortitle">Green Station: Ella Boynton</h3>
+							<p>Ella was diagnosed with Acute Lymphoblastic Leukemia (ALL) in May 2013, one week before her second birthday. Throughout her treatment of 26 months, Ella endured several bone marrow aspirations, many spinal taps, blood and platelet transfusions, numerous hospital stays, and a variety of chemotherapy and other medications. Through it all, Ella was a brave and strong little girl. She went into remission soon after starting her treatment and continues to be in remission. She now gets her blood count checked every 6 months and is proud to be a survivor! Ella is in the second grade at MECC and loves to read, swim, and play the piano.  </p>
 						</div>
 					</section>
 					<section class="spotlight">
@@ -85,6 +86,18 @@
 					</section>
 				</section>
 
+				<!-- CTA -->
+			  <section id="cta" class="wrapper style4">
+			    <div class="inner">
+			      <header>
+			        <h2>2018 Registration open in October</h2>
+			      </header>
+			      <ul class="actions vertical">
+			        <!-- <li><a href="https://www.locallevelevents.com/events/details/3828" class="button fit">REGISTER</a></li> -->
+			        <li><a href="event.html" class="button fit special">Learn more</a></li>
+			      </ul>
+			    </div>
+			  </section>
 				<!-- Footer -->
 					<footer id="footer">
 						<ul class="icons">
