--- a/sponsors.html
+++ b/sponsors.html
@@ -18,27 +18,28 @@
 
         <!-- Header -->
         <header id="header">
-            <h1><a href="index.html">MASON COLOR 4 A CURE 5k</a></h1>
-            <nav id="nav">
-                <ul>
-                    <li class="special">
-                        <a href="#menu" class="menuToggle"><span>Menu</span></a>
-                        <div id="menu">
-                            <ul>
-                                <li><a href="index.html">Home</a></li>
-                                <li><a href="event.html">Event Details</a></li>
-                                <li><a href="event.html#faq">FAQ</a></li>
-<li><a href="colorstations.html">About the Honorees</a></li>
-                                <!-- <li><a href="#">About Us</a></li> -->
-                                <li><a href="sponsors.html">Our Sponsors</a></li>
-                                <li><a href="contact.html">Contact Us</a></li>
+          <h1><a href="index.html">MASON COLOR 4 A CURE 5K</a></h1>
+          <nav id="nav">
+            <ul>
+              <li class="special">
+                <a href="#menu" class="menuToggle"><span>Menu</span></a>
+                <div id="menu">
+                  <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="event.html">Event Details</a></li>
+                    <li><a href="event.html#faq">FAQ</a></li>
+                    <li><a href="colorstations.html">About the Honorees</a></li>
+                    <!-- <li><a href="about.html">About Us</a></li> -->
+                    <li><a href="sponsors.html">Our Sponsors</a></li>
+                    <li><a href="contact.html">Contact Us</a></li>
 
-                                <li><a href="https://www.locallevelevents.com/events/details/3828"></br>Register</a></li>
-                            </ul>
-                        </div>
-                    </li>
-                </ul>
-            </nav>
+                    <!-- <li><a href="https://www.locallevelevents.com/events/details/3828"></br>Register</a></li> -->
+                  </ul>
+                </div>
+              </li>
+            </ul>
+          </nav>
+
         </header>
 
         <!-- Main -->
@@ -48,13 +49,26 @@
             </header>
             <section class="wrapper style5">
                 <div class="inner">
+
+                  <section>
+                      <h2>Interested in sponsoring?</h2>
+                      <div class="row">
+                              <p>Contact us <a href= "contact.html">here</a> and we'll give you more information about how you or your company can help.</p>
+                          </div>
+                    </br>
+                    </br>
+                    </br>
+                    </br>
+                    </br>
+                  </section>
                     <section>
                         <div class="box alt">
+                            <h2>Thank you to our 2017 Color 4 a Cure Sponsors!</h2>
                             <div class="row uniform 50%">
                                 <div class="3u"><span class="image fit"><a href="https://westshorepizza.com/"><img src="https://res.cloudinary.com/grubhub/image/upload/w_400,h_300,f_auto,fl_lossy,q_80,c_fit/b3laerjfxg19ozb2bugz" alt="" /></a></span></div>
                                 <div class="3u"><span class="image fit"><a href="http://www.masonanimalhospital.com/"><img src="http://www.masonanimalhospital.com/layout/images/logo.png" alt="" /></a></span></div>
                                 <div class="3u"><span class="image fit"><a href="http://www.runbuckeye.com/"><img src="http://www.runbuckeye.com/uploads/8/3/2/0/83209168/1472656750.png" alt="" /></a></span></div>
-                                <div class="3u"><span class="image fit"><a href="http://runmason.com"><img src="images/run boosters.png"" alt="" /></a></span></div>
+                                <div class="3u"><span class="image fit"><a href="http://runmason.com"><img src="images/run boosters.png" alt="" /></a></span></div>
                             <div class="4u"><span class="image fit"><img src="images/pic02.jpg" alt="" /></span></div>
                                 <div class="4u"><span class="image fit"><img src="images/pic01.jpg" alt="" /></span></div>
                                 <div class="4u"><span class="image fit"><img src="images/pic02.jpg" alt="" /></span></div>
@@ -70,18 +84,7 @@
                             </div>
                         </div>
                     </section>
-                    <section>
-                    </br>
-                    </br>
-                    </br>
-                    </br>
-                    </br>
-                        <h2>Interested in sponsoring?</h2>
-                        <div class="row">
-                                <p>Contact us <a href= "contact.html">here</a> and we'll give you more information on how you or your company can help.</p>
-                            </div>
-                        </div>
-                    </section>
+
 
 
 
@@ -89,7 +92,18 @@
             </section>
         </article>
         <!-- CTA -->
-        
+        <section id="cta" class="wrapper style4">
+          <div class="inner">
+            <header>
+              <h2>2018 Registration open in October</h2>
+            </header>
+            <ul class="actions vertical">
+              <!-- <li><a href="https://www.locallevelevents.com/events/details/3828" class="button fit">REGISTER</a></li> -->
+              <li><a href="event.html" class="button fit special">Learn more</a></li>
+            </ul>
+          </div>
+        </section>
+
         <!-- Footer -->
         <footer id="footer">
             <ul class="icons">
