adding honoree: ben

--- a/colorstations.html
+++ b/colorstations.html
@@ -70,10 +70,15 @@
 						</div>
 					</section>
 					<section class="spotlight">
-						<div class="image"><img src="images/honor/Red - Hannah Berryman.jpg" alt="" /></div>
+						<div class="image"><img src="images/honor/red-ben.jpg" alt="" /></div>
 						<div class="content">
-							<h3 class ="honortitle">Red Station: Hannah Berryman</h3>
-							<p>Hannah was diagnosed with Acute Lymphoblastic Leukemia (ALL) in 2002 when she was 3 years old.  She went through 26 months of treatment which included both oral and intravenous chemotherapy, monthly spinal taps, blood & platelet transfusions and numerous hospital stays.  Hannah went into remission shortly after her treatment began and has remained in remission ever since.  In August of 2017 she started college at the University of Cincinnati and is a Fine Arts Major in the DAAP program.</p>
+							<h3 class ="honortitle">Red Station: Ben Terribilini</h3>
+							<p>Ben Terribilini was in 6th grade at Mason Intermediate when he started feeling sick. He just couldn't shake his cold symptoms. Then one day he woke up with a weird rash on his arm and back, so his mom took him to the doctor. It turned out that the rash was really bruising from his sheets - his blood cells were going crazy and making him bruise incredibly easy. Blood tests showed he had T-cell Acute Lymphoblastic Leukemia (ALL).He went to the hospital that day and stayed there almost every day for the next 6 months. </p>
+
+								<p>Ben had 2 rounds of chemotherapy which made him lose his hair, gain weight, have bad mood swings, be violently ill, and still didn't get rid of the Leukemia. It was decided that his best option was to get a bone marrow transplant. Luckily his oldest brother Josh was a perfect match.
+								</p>
+								<p>
+								To prepare for the transplant, Ben had to go through huge doses of chemo and total body irradiation, which made him extremely sick and unable to eat. The actual transplant was easy, like a blood transfusion. It took a couple of weeks to see if the stem cells from his brother were working though. Meanwhile Ben was the sickest he's ever been. Eventually, he started improving and was well enough to go home. Now it's been 3 1/2 years since his bone marrow transplant and he hasn't had to spend another night in the hospital, which amazes his doctors. He's doing great! </p>
 							</div>
 					</section>
 					<section class="spotlight">
