--- a/colorstations.html
+++ b/colorstations.html
@@ -70,7 +70,7 @@
 						</div>
 					</section>
 					<section class="spotlight">
-						<div class="image"><img src="images/honor/red-ben.jpg" alt="" /></div>
+						<div class="image"><img src="images/honor/red-ben.JPG" alt="" /></div>
 						<div class="content">
 							<h3 class ="honortitle">Red Station: Ben Terribilini</h3>
 							<p>Ben Terribilini was in 6th grade at Mason Intermediate when he started feeling sick. He just couldn't shake his cold symptoms. Then one day he woke up with a weird rash on his arm and back, so his mom took him to the doctor. It turned out that the rash was really bruising from his sheets - his blood cells were going crazy and making him bruise incredibly easy. Blood tests showed he had T-cell Acute Lymphoblastic Leukemia (ALL).He went to the hospital that day and stayed there almost every day for the next 6 months. </p>
