--- a/event.html
+++ b/event.html
@@ -57,32 +57,58 @@
               <h5>Schedule</h5>
             </header>
               <div class="table-wrapper">
-                <p>Check back in October for more details about the 2018 Color 4 a Cure 5K!</p>
-
+                <table id="sched">
+                  <tbody>
+                    <tr>
+                      <td>12:30-1:00 PM</td>
+                      <td>Check-in begins in Team Room</td>
+                    </tr>
+                    <tr>
+                      <td>1:15 PM</td>
+                      <td>Organize into pacing groups</td>
+                    </tr>
+                    <tr>
+                      <td>1:30 PM</td>
+                      <td>Runners begin</td>
+                    </tr>
+                    <tr>
+                      <td>1:40 PM</td>
+                      <td>Joggers begin</td>
+                    </tr>
+                    <tr>
+                      <td>1:50 PM</td>
+                      <td>Walkers begin</td>
+                    </tr>
+                    <tr>
+                      <td>Post-race</td>
+                      <td>Food and music</td>
+                    </tr>
+                  </tbody>
+                </table>
                 <h5>Race Day</h5>
                 <ul class="alt">
                   <li>Bring your printed <a target="_blank" href="https://drive.google.com/file/d/0B_fYFpL-BMVTZjRHa1ZwT0ZJcU0/view?usp=sharing">Adult</a> or <a target="_blank" href="https://drive.google.com/file/d/0B_fYFpL-BMVTeEZnMWNZR0V3bF9qVkNUby0ycVpqR3hTLXpV/view?usp=sharing">Student</a> waiver forms to check-in at the <a target="_blank" href="https://goo.gl/maps/NJE7pdRXsoy">Mason High School Team Room</a> (6100 S Mason Montgomery Rd)</li>
                 </ul>
                 <h5>Course Map</h5>
-                <img src="images/newcourse.png" alt="course"> </div>
+                <img src="images/2018course.jpg" alt="course" width="100%"> </div>
             </div>
             <div class="6u$ 12u$(medium)">
               <h5>Color 4 A Cure 5K</h5>
               <ul class="alt">
                 <li><i class="fa fa-map-marker" aria-hidden="true"></i> <a href="https://goo.gl/maps/e5Pij3ppvyQ2">Corwin Nixon Park</a> Mason, OH 45040</li>
-                <li><i class="fa fa-calendar" aria-hidden="true"></i> Saturday November 11, 2018 at 1 PM </li>
+                <li><i class="fa fa-calendar" aria-hidden="true"></i> Saturday November 10, 2018 at 1 PM </li>
                 <li><i class="fa fa-heartbeat" aria-hidden="true"></i> Benefiting the Leukemia and Lymphoma Society through Mason National Honor Society.<br>
                   <a href="colorstations.html">Learn more about our color station honorees...</a></li>
               </ul>
               <h5>Pricing</h5>
-                <i>Check back soon for registration deadlines!</i>
-                <br><br>
               <ul class="alt">
-                <li>Early Registration: $25 with t-shirt</li>
-                <li>Late Registration: $25 no t-shirt</li>
-                <li>Day-of Registration: $30 no t-shirt</li>
+                <li>10/16 - 10/26 (11:59 PM) Early Registration: $25 with t-shirt</li>
+                <li>10/27 - 11/10 (11:59 PM) Regular Registration: $25 no t-shirt</li>
+                <li>11/10 Day-of Registration: $30 no t-shirt</li>
                 <li><i>Children 3 and under: free</i></li>
               </ul>
+                <br><br>
+
               <!-- <a href="https://www.locallevelevents.com/events/details/3828" class="button fit special disabled">Check back later for Registration</a> <a href="https://drive.google.com/file/d/0B_fYFpL-BMVTZjRHa1ZwT0ZJcU0/view?usp=sharing" class="button fit large">Adult Waiver</a> <a href="https://drive.google.com/file/d/0B_fYFpL-BMVTeEZnMWNZR0V3bF9qVkNUby0ycVpqR3hTLXpV/view?usp=sharing" class="button fit">Student Waiver</a> </div> -->
           </div>
         </section>
