--- a/colorstations.html
+++ b/colorstations.html
@@ -82,11 +82,18 @@
 							</div>
 					</section>
 					<section class="spotlight">
-						<div class="image"><img src="images/honor/yellow-liz.png" alt="" /></div>
+						<div class="image"><img src="images/honor/Maeryn.jpg" alt="" /></div>
 						<div class="content">
-							<h3 class ="honortitle">Yellow Station: Liz Lothrop</h3>
-							<p>Lizzy was diagnosed Oct. 25, 2008, at age 14, with Acute Lymphoblastic Leukemia (ALL). It was a long three year battle with chemo, radiation and many hospital stays. She then had two years of regaining her strength before she went off to college in the fall of 2013. June 15, 2015, Liz’s world came crashing down for the second time with cancer - a Glioblastoma Multiform Grade 4 brain tumor.  Liz’s Doctors were not giving her any hope. Elizabeth endured more pain and heartache with this cancer. She had radiation and chemo again, but to no avail. The GMB was vicious and kept returning with a vengeance. Eleven months after Liz was diagnosed she passed on May 3, 2016, in Durham, North Carolina.  Liz’s grace and courage during her final days was inspirational.
-</p>
+							<h3 class ="honortitle">Yellow Station: Maeryn Kelly</h3>
+							<p>On Father’s Day 2016, Maeryn had been playing with some neighbor kids and got hit in the knee pretty hard.  She went to urgent care, they did x-rays and suspected a fracture to immobilized her leg.  The next day, we took her to an orthopaedist, who reviewed the films, did NOT see a fracture, but told us to continue working with the physical therapist because Osgood-Slatter did seem probable.
+
+	After several weeks of PT, with no improvement and continued pain, we went for a second ortho consult.  It was then that we were referred directly to Cincinnati Children’s for probable leukemia.  We would not leave the hospital for 37 days.
+
+	Maeryn has received exceptional care.  From the moment we started treating her cancer, we immediately saw improvement.  She began walking without crutches within the first week.  Since you can’t SEE cancer, it’s hard to believe your child has it until you see the treatment start to really work.  But she’s definitely beating it!
+
+	She’s tolerated the chemo really well, for the most part.  She’s experienced minimal nausea and pain.  And we’ve been well prepared for possible side effects so I don’t feel like anything has really shocked us, which is awesome.  After all, hearing cancer was a big enough shock.
+
+The support we’ve had from the hospital, school, friends, family and the community has been astounding.  I keep saying, this isn’t a club I ever wanted to or thought I’d join, but now that I’m here, I realize how big the club is.  And they give great big hugs right when you need them! </p>
 						</div>
 					</section>
 				</section>
