Added registration website

--- a/event.html
+++ b/event.html
@@ -102,10 +102,11 @@
               </ul>
               <h5>Pricing</h5>
               <ul class="alt">
-                <li>10/16 - 10/26 (11:59 PM) Early Registration: $25 with t-shirt</li>
-                <li>10/27 - 11/9 (11:59 PM) Regular Registration: $25 no t-shirt</li>
+                <li>10/16 - 10/26 (11:59 PM) Early Registration:      $25 with t-shirt</li>
+                <li>10/27 - 11/9 (11:59 PM) Regular Registration:     $25 no t-shirt</li>
                 <li>11/10 Day-of Registration: $30 no t-shirt</li>
                 <li><i>Children 3 and under: free</i></li>
+                <li> Register <a target="_blank" href="https://www.locallevelevents.com/events/details/5935">Here!</a> </li>
               </ul>
                 <br><br>
 
