Added registration button to event details

--- a/event.html
+++ b/event.html
@@ -106,7 +106,7 @@
                 <li>10/27 - 11/9 (11:59 PM) Regular Registration:     $25 no t-shirt</li>
                 <li>11/10 Day-of Registration: $30 no t-shirt</li>
                 <li><i>Children 3 and under: free</i></li>
-                <li> Register <a target="_blank" href="https://www.locallevelevents.com/events/details/5935">Here!</a> </li>
+
               </ul>
                 <br><br>
 
@@ -191,7 +191,7 @@
       </header>
       <ul class="actions vertical">
         <!-- <li><a href="https://www.locallevelevents.com/events/details/3828" class="button fit">REGISTER</a></li> -->
-        <li><a href="event.html" class="button fit special">Learn more</a></li>
+        <li><a href=https://www.locallevelevents.com/events/details/5935 class="button fit special">REGISTER</a></li>
       </ul>
     </div>
   </section>
