--- a/event.html
+++ b/event.html
@@ -106,7 +106,7 @@
                 <li>10/27 - 11/9 (11:59 PM) Regular Registration:     $25 no t-shirt</li>
                 <li>11/10 Day-of Registration: $30 no t-shirt</li>
                 <li><i>Children 3 and under: free</i></li>
-
+                <a href="https://www.locallevelevents.com/events/details/5935" class="button fit special">Register</a> <a href="https://drive.google.com/file/d/0B_fYFpL-BMVTZjRHa1ZwT0ZJcU0/view?usp=sharing" class="button fit large">Adult Waiver</a> <a href="https://drive.google.com/file/d/0B_fYFpL-BMVTeEZnMWNZR0V3bF9qVkNUby0ycVpqR3hTLXpV/view?usp=sharing" class="button fit">Student Waiver</a> </div>
               </ul>
                 <br><br>
 
