Updated all the Registration buttons

--- a/event.html
+++ b/event.html
@@ -187,7 +187,7 @@
   <section id="cta" class="wrapper style4">
     <div class="inner">
       <header>
-        <h2>2018 Registration open in October</h2>
+        <h2>Register by Friday 10/26 for a free t-shirt</h2>
       </header>
       <ul class="actions vertical">
         <!-- <li><a href="https://www.locallevelevents.com/events/details/3828" class="button fit">REGISTER</a></li> -->
