--- a/colorstations.html
+++ b/colorstations.html
@@ -34,7 +34,7 @@
 			              <li><a href="sponsors.html">Our Sponsors</a></li>
 			              <li><a href="contact.html">Contact Us</a></li>
 
-			              <!-- <li><a href="https://www.locallevelevents.com/events/details/3828"></br>Register</a></li> -->
+			              <li><a href=https://www.locallevelevents.com/events/details/5935 class="button fit special">REGISTER</a></li> <!-- <li><a href="https://www.locallevelevents.com/events/details/3828"></br>Register</a></li> -->
 			            </ul>
 			          </div>
 			        </li>
@@ -102,11 +102,11 @@ The support we’ve had from the hospital, school, friends, family and the commu
 			  <section id="cta" class="wrapper style4">
 			    <div class="inner">
 			      <header>
-			        <h2>2018 Registration open in October</h2>
+			        <h2>Register by Friday 10/26 for a free t-shirt</h2>
 			      </header>
 			      <ul class="actions vertical">
-			        <!-- <li><a href="https://www.locallevelevents.com/events/details/3828" class="button fit">REGISTER</a></li> -->
-			        <li><a href="event.html" class="button fit special">Learn more</a></li>
+			        <li><a href=https://www.locallevelevents.com/events/details/5935 class="button fit special">REGISTER</a></li> <!-- <li><a href="https://www.locallevelevents.com/events/details/3828" class="button fit">REGISTER</a></li> -->
+			        <!--<li><a href="event.html" class="button fit special">Learn more</a></li> -->
 			      </ul>
 			    </div>
 			  </section>
