Fixed Registration button for contact us and sponsor page

--- a/contact.html
+++ b/contact.html
@@ -73,8 +73,8 @@
 	      </ul>
 	    </div>
 	  </section>
-		<!-- Footer -->
-		<footer id="footer">
+		<!- Footer -->
+		<!--<footer id="footer">
 			<ul class="icons">
 				<li><a href="https://twitter.com/mhscolor4acure" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 				<li><a href="https://instagram.com/mhscolor4acure" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
