--- a/sponsors.html
+++ b/sponsors.html
@@ -104,8 +104,8 @@
           </div>
         </section>
 
-        <!-- Footer -->
-        <footer id="footer">
+        <!-Footer -->
+        <!--<footer id="footer">
             <ul class="icons">
                 <li><a href="https://twitter.com/mhscolor4acure" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
                 <li><a href="https://instagram.com/mhscolor4acure" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
